--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Tayfun Bugra  BAS</title>
-<!-- 
-Moonlight Template 
-https://templatemo.com/tm-512-moonlight
--->
-        <meta name="description" content="">
+
+        <meta name="author" content="Tayfun Bugra  BAS">
+        <meta name="description" content="Tayfun Bugra  BAS">
+        <meta name="keywords" content="HTML, CSS, JavaScript, java, cs,cpp,c,python,Tayfun,Bugra,bas,bugra,tayfun,yazılım,blog,software,dijital oyun tasarımı, makine öğrenimi,mühendis,yapay zeka">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
