--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Tayfun Bugra  BAS</title>
 
-        <meta name="author" content="Tayfun Bugra  BAS">
+        <meta name="author" content="Tayfun Bugra BAS | Yazılım Mühendisi | Software Engineer">
         <meta name="google-site-verification" content="Za2V6OTBvUwKAuGAg_m4sHUZnb0_bBRi_KAt0mNLMoI" />
-        <meta name="description" content="Tayfun Bugra  BAS">
+        <meta name="description" content="Tayfun Bugra BAS | Yazılım Mühendisi | Software Engineer">
         <meta name="keywords" content="HTML, CSS, JavaScript, java, cs,cpp,c,python,Tayfun,Bugra,bas,bugra,tayfun,yazılım,blog,software,dijital oyun tasarımı, makine öğrenimi,mühendis,yapay zeka">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
