--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <div class="footer">
           <div class="content">
-              <p>Copyright &copy; Tayfun Bugra Bas</p>
+              <p>Tayfun Buğra Baş</p>
           </div>
         </div>
  
